--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,12 +1,84 @@
-black==21.5b1
-flake8>=3.7.9, <4.0
-ipython~=7.10
-isort~=5.0
+anyconfig==0.10.1
+appdirs==1.4.4
+appnope==0.1.3
+arrow==1.2.3
+attrs==22.2.0
+backcall==0.2.0
+binaryornot==0.4.4
+cachetools==4.2.4
+certifi==2022.12.7
+chardet==4.0.0
+click==7.1.2
+cookiecutter==1.7.3
+coverage==7.2.1
+decorator==5.1.1
+dynaconf==3.1.5
+et-xmlfile==1.1.0
+fastjsonschema==2.16.3
+flake8==3.9.2
+fsspec==2021.11.1
+gitdb==4.0.10
+GitPython==3.1.31
+idna==2.10
+importlib-resources==5.12.0
+iniconfig==2.0.0
+ipython==7.34.0
+isort==5.12.0
+jedi==0.18.2
+Jinja2==3.1.2
+jinja2-time==0.2.0
+jmespath==0.10.0
+jsonschema==4.17.3
+jupyter-client==6.1.12
+jupyter_core==5.2.0
 kedro==0.17.5
-kedro-telemetry~=0.1.0
-nbstripout~=0.4
-pytest-cov~=2.5
-pytest-mock>=1.7.1, <2.0
-pytest~=6.2
-wheel>=0.35, <0.37
-pandas
+kedro-telemetry==0.1.4
+MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
+mccabe==0.6.1
+mypy-extensions==1.0.0
+nbformat==5.7.3
+nbstripout==0.6.1
+numpy==1.24.2
+openpyxl==3.1.1
+packaging==23.0
+pandas==1.5.3
+parso==0.8.3
+pathspec==0.11.0
+pexpect==4.8.0
+pickleshare==0.7.5
+pip-tools==5.5.0
+pkgutil_resolve_name==1.3.10
+platformdirs==3.0.0
+pluggy==0.13.1
+poyo==0.5.0
+prompt-toolkit==3.0.38
+ptyprocess==0.7.0
+py==1.11.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
+Pygments==2.14.0
+pyrsistent==0.19.3
+pytest==6.2.5
+pytest-cov==2.12.1
+pytest-mock==1.13.0
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+python-slugify==8.0.1
+pytz==2022.7.1
+PyYAML==5.4.1
+pyzmq==25.0.0
+regex==2022.10.31
+requests==2.25.1
+rope==0.19.0
+six==1.16.0
+smmap==5.0.0
+text-unidecode==1.3
+toml==0.10.2
+toposort==1.10
+tornado==6.2
+traitlets==5.9.0
+urllib3==1.26.14
+wcwidth==0.2.6
+XlsxWriter==3.0.8
+zipp==3.15.0
